test/type-error-2.ktn
// TODO(strager): Improve error reporting.

define baz<a> ([a] [char] -> int):
  ->x; [x] kitten_intrinsic_addVector
